# server-stats

./: pyproject.toml  readme.md
src/: .env  run.py
src/modules/: console.py  discord.py  info.py
